Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
I was trying to build the project on a rockpro64 system to look into something else and ran into this
-- Arrow build warning level: PRODUCTION CMake Error at cmake_modules/SetupCxxFlags.cmake:332 (message): Unsupported arch flag: -march=armv8-a+crc+crypto. Call Stack (most recent call first): CMakeLists.txt:398 (include) -- Configuring incomplete, errors occurred!
Attachments
Issue Links
- links to