ARROW-8410: [C++] Fix compilation errors on modest ARMv8 platforms (rockpro64, rpi4)

These platforms don't support `-march=armv8-a+crc+crypto` so don't think this makes sense to have as a default.

Since ORC has released since a build flag was added to turn off `-Werror` I've upgraded it here and removed the previous warning workarounds

This also resolves ARROW-7968

Closes #6907 from wesm/ARROW-8410

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>